--- a/templates/base.html
+++ b/templates/base.html
@@ -7,9 +7,22 @@
 </head>
 <body>
 
-    <header>
-        <h1>WheelEats</h1>
-        <p>Finde barrierefreie Restaurants auf einen Blick</p>
+    <header class="navbar">
+    <div class="nav-left">
+        <a href="/" class="logo">WheelEats</a>
+    </div>
+
+    <nav class="nav-links">
+        <a href="/">Home</a>
+        <a href="/restaurants">Restaurants</a>
+        <a href="/about">Über uns</a>
+        <a href="/contact">Kontakt</a>
+    </nav>
+
+    <div class="nav-right">
+        <a href="/add" class="add-btn">Ort hinzufügen</a>
+    </div>
+
     </header>
 
     <main>
